// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`git.extractRepo extractRepo resolves a new Git repository to { new repo, AddRepoAction action } 1`] = `
Object {
  "corsProxy": "https://cors-anywhere.herokuapp.com/",
  "id": undefined,
  "name": "test/test",
  "oauth": "github",
  "password": "",
  "refs": Array [
    "feature/test",
  ],
  "token": "",
  "url": Object {
    "hash": "",
    "href": "git@github.com:test/test.git",
    "pathname": "/test/test.git",
    "port": null,
    "protocol": "ssh",
    "protocols": Array [],
    "query": Object {},
    "resource": "github.com",
    "search": "",
    "user": "git",
  },
  "username": "",
}
`;

exports[`git.extractRepo extractRepo resolves a new Git repository to { new repo, AddRepoAction action } 2`] = `
Object {
  "id": undefined,
  "repo": Object {
    "corsProxy": "https://cors-anywhere.herokuapp.com/",
    "id": undefined,
    "name": "test/test",
    "oauth": "github",
    "password": "",
    "refs": Array [
      "feature/test",
    ],
    "token": "",
    "url": Object {
      "hash": "",
      "href": "git@github.com:test/test.git",
      "pathname": "/test/test.git",
      "port": null,
      "protocol": "ssh",
      "protocols": Array [],
      "query": Object {},
      "resource": "github.com",
      "search": "",
      "user": "git",
    },
    "username": "",
  },
  "type": 13,
}
`;
